--- a/agree/res/layout/activity_chat.xml
+++ b/agree/res/layout/activity_chat.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="#f2f0eb" >
+    android:background="#ffffff" 
+    >
+<!--     android:background="#f2f0eb"  -->
 
     <!-- android:background="@color/top_bar_normal_bg" -->
 
@@ -489,7 +491,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bar_bottom"
-        android:layout_below="@id/top_bar" >
+        android:layout_below="@id/top_bar"
+        >
 
         <ProgressBar
             android:id="@+id/pb_load_more"
@@ -566,7 +569,8 @@
             android:layout_alignParentLeft="true"
             android:background="@drawable/chat_more_corners2"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp" >
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="3dp" >
 
             <TextView
                 android:id="@+id/TextView02"
