--- a/agree/res/layout/row_received_message.xml
+++ b/agree/res/layout/row_received_message.xml
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/tv_chatcontent" 
-            android:layout_marginLeft="5dp">
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/tv_yymmdd"
