--- a/agree/res/layout/row_received_picture.xml
+++ b/agree/res/layout/row_received_picture.xml
@@ -10,8 +10,8 @@
         android:id="@+id/timestamp"
         style="@style/chat_text_date_style"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:visibility="gone"/>
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -25,32 +25,34 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="@dimen/margin_chat_activity"
-            android:background="@drawable/mini_avatar_shadow"
+            android:src="@drawable/mini_avatar_shadow"
             android:scaleType="fitXY" />
 
         <RelativeLayout
             android:id="@+id/row_recv_pic"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_userid"
             android:layout_marginLeft="@dimen/margin_chat_activity"
-            android:layout_toRightOf="@id/iv_userhead"
-             >
+            android:layout_toRightOf="@id/iv_userhead" >
 
-<!--                 android:background="@drawable/chatfrom_bg" -->
+            <!-- android:background="@drawable/chatfrom_bg" -->
+
             <ImageView
-                android:background="@drawable/leftchat"
                 android:id="@+id/iv_sendPicture"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:scaleType="fitCenter" /> 
+                android:background="@drawable/leftchat"
+                android:scaleType="fitCenter" />
 
             <LinearLayout
                 android:id="@+id/ll_loading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:gravity="center_horizontal"
-                android:orientation="vertical" >
+                            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+                android:orientation="vertical"
+                >
 
                 <ProgressBar
                     android:id="@+id/progressBar"
@@ -66,6 +68,37 @@
                     android:textColor="@android:color/white"
                     android:visibility="visible" />
             </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/rela_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+               android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/iv_sendPicture" 
+                android:layout_marginLeft="5dp">
+
+                <TextView
+                    android:id="@+id/tv_yymmdd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:text="15/8/7"
+                    android:textColor="#8e8e8e"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tv_hhmm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_yymmdd"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="1dp"
+                    android:text="10:16"
+                    android:textColor="#8e8e8e"
+                    android:textSize="12sp" />
+            </RelativeLayout>
+
         </RelativeLayout>
 
         <TextView
@@ -73,9 +106,11 @@
             style="@style/chat_text_name_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@id/iv_userhead"
-            android:layout_toLeftOf="@id/row_recv_pic" />
+            android:layout_alignLeft="@+id/row_recv_pic"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="7dp"
+            android:text="daf" />
+
     </RelativeLayout>
 
 </LinearLayout>
