--- a/agree/res/layout/row_sent_message.xml
+++ b/agree/res/layout/row_sent_message.xml
@@ -16,7 +16,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_chat_activity" >
+        android:layout_marginTop="@dimen/margin_chat_activity" 
+        android:layout_marginBottom="@dimen/margin_chat_activity">
 
         <ImageView
             android:id="@+id/iv_userhead"
@@ -51,7 +52,8 @@
             android:layout_toLeftOf="@id/tv_chatcontent"
             android:clickable="true"
             android:src="@drawable/msg_state_failed_resend"
-            android:visibility="gone" />
+            android:visibility="gone" 
+            />
 
         <TextView
             android:id="@+id/tv_ack"
@@ -93,7 +95,8 @@
             android:textSize="12sp"
             android:textColor="#8e8e8e"
             android:layout_marginRight="5dp"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            />
 
     </RelativeLayout>
 
