--- a/agree/res/layout/fragment_party.xml
+++ b/agree/res/layout/fragment_party.xml
@@ -7,9 +7,8 @@
     tools:context=".PartyFragment" >
 
     <!-- TODO: Update blank fragment layout -->
-
     <RelativeLayout
-        android:id="@+id/tab_party_title_layout"
+	    android:id="@+id/tab_party_title_layout"
         android:layout_width="match_parent"
         android:layout_height="50.0dp" >
 
@@ -20,7 +19,8 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="日程"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+             />
 
         <RelativeLayout
             android:id="@+id/tab_party_new_layout"
@@ -39,31 +39,19 @@
                 android:text="新建"
                 android:textColor="#d3d3d3"
                 android:textSize="17.0sp" />
-        </RelativeLayout>
 
+        </RelativeLayout>
+        
         <TextView
             android:id="@+id/textView1"
             android:layout_width="match_parent"
             android:layout_height="1.0dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:background="#aaaaaa" />
+			android:background="#aaaaaa"            
+            />
+
     </RelativeLayout>
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/tab_party_swipe_refresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="50.0dp" >
-
-        <ListView
-            android:id="@+id/tab_party_listview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" >
-        </ListView>
-    </android.support.v4.widget.SwipeRefreshLayout>
 
     <RelativeLayout
         android:id="@+id/tab_party_prompt_layout"
@@ -71,7 +59,55 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/tab_party_title_layout"
         android:layout_centerHorizontal="true"
-        android:visibility="gone" >
+        android:visibility="gone"
+        >
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="45dp"
+            android:textColor="#ff0000"
+            android:text="你还没有创建日程哦！" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/tab_party_list_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tab_party_title_layout"
+        android:layout_centerHorizontal="true"
+        >
+
+        <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/pull_refresh_list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="#ffffff"
+        android:cacheColorHint="#00000000"
+        android:divider="#19000000"
+        android:dividerHeight="1dp"
+        android:fadingEdge="none"
+        android:fastScrollEnabled="false"
+        android:footerDividersEnabled="false"
+        android:headerDividersEnabled="false"
+        android:smoothScrollbar="true"
+        ptr:ptrAnimationStyle="rotate"
+        ptr:ptrDrawableStart="@drawable/refreshing_animtaion" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/tab_party_prompt_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tab_party_title_layout"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+         >
 
         <TextView
             android:id="@+id/textView3"
@@ -81,7 +117,9 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="45dp"
             android:text="你还没有参与过日程哦！"
-            android:textColor="#ff0000" />
+            android:textColor="#ff0000"
+            />
+
     </RelativeLayout>
 
 </RelativeLayout>
