--- a/agree/res/drawable/kongxinyuan_selector.xml
+++ b/agree/res/drawable/kongxinyuan_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" android:drawable="@drawable/kongxin_gray"></item>
-	<item android:drawable="@drawable/kongxin_white"></item>
+    <item android:state_pressed="true" android:drawable="@drawable/yuan_gray"></item>
+	<item android:drawable="@drawable/yuan_white"></item>
 </selector>
