--- a/agree/res/layout/activity_friends_data.xml
+++ b/agree/res/layout/activity_friends_data.xml
@@ -13,15 +13,6 @@
         android:background="#000000"
          >
 
-        <ImageView
-            android:id="@+id/FriendsData_head"
-            android:layout_width="80.0dp"
-            android:layout_height="80.0dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="64dp"
-            android:src="@drawable/login_1" />
-
         <TextView
             android:id="@+id/FriendsData_nickname"
             android:layout_width="wrap_content"
@@ -39,10 +30,26 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/FriendsData_nickname"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="15.0dp"
             android:gravity="center"
             android:text="TextView"
             android:textColor="#ffffff" />
+
+        <ImageView
+            android:id="@+id/FriendsData_head"
+            android:layout_width="80.0dp"
+            android:layout_height="80.0dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/login_1" />
+
+        <ImageView
+            android:id="@+id/FriendsData_head_src"
+            android:layout_width="90.0dp"
+            android:layout_height="90.0dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/yuan_white" />
 
     </RelativeLayout>
 
