--- a/lib_Dialog/res/values/styles.xml
+++ b/lib_Dialog/res/values/styles.xml
@@ -25,7 +25,7 @@
         <item name="android:layout_weight">1</item>
         <item name="android:layout_marginBottom">10dp</item>
         <item name="android:background">@drawable/btn_selector</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">#808080</item>
         <item name="android:gravity">center</item>
     </style>
 
